feat: add local private message helper